--- a/problem_sets/ps3/Homework 3.ipynb
+++ b/problem_sets/ps3/Homework 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 2,
    "metadata": {
     "id": "6CTNY7oPpXGe"
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 3,
    "metadata": {
     "id": "iOm7rKRFpa32"
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 4,
    "metadata": {
     "id": "b-HsiCSG0TcP"
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,10 @@
     "m = VS^{-1}U^Td\n",
     "$\n",
     "\n",
-    "c) $\n",
+    "c) \n",
+    "I use RMS of residuals $z_{data} - z_{model}$ as diagonal elements of matrix $N$, so the maximum-likelihood errors remain unbiased. \n",
+    "\n",
+    "$\n",
     "f = \\frac{1}{4a}\n",
     "$\n",
     "\n",
@@ -373,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -437,14 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Obtaned focal length f = 1499.66 +- 0.58\n"
+      "Obtaned focal length f = 1499.66 +- 0.58 mm\n"
      ]
     }
    ],
@@ -457,15 +460,8 @@
     "\n",
     "f = 1 / (4 * m[-1])\n",
     "df = m_err[-1] / (4 * m[-1]**2)\n",
-    "print(f\"Obtaned focal length f = {f:.2f} +- {df:.2f}\")"
+    "print(f\"Obtaned focal length f = {f:.2f} +- {df:.2f} mm\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
